--- a/templates/hospital/patient_base.html
+++ b/templates/hospital/patient_base.html
@@ -286,7 +286,10 @@
       <li tabindex="0" class="icon-calendar"> <a style="color:white; text-decoration:none;" href="/patient-appointment"><span>Appointments</span></a></li>
       <li tabindex="0" class="icon-users"> <a style="color:white; text-decoration:none;" href="/patient-discharge"><span>Discharge</span></a></li>
       <li tabindex="0" class="icon-calendar"> <a style="color:white; text-decoration:none;" href="/patient-prescription"><span>Prescriptions</span></a></li>
+      <li tabindex="0" class="icon-users"> <a style="color:white; text-decoration:none;" href="/patient-activity"><span>Activity</span></a></li>
     </ul>
+
+
   </nav>
   <main>
     <!-- nav start -->
