--- a/templates/hospital/doctor_add_prescrip.html
+++ b/templates/hospital/doctor_add_prescrip.html
@@ -23,6 +23,27 @@
 </head>
 <div>
 
+  <h5>Prescriptions for {{ patient.get_name }}</h5>
+<div class="prescription-details"></div>
+{% if prescriptions %}
+    <ul>
+        {% for prescription in prescriptions %}
+            <li class="prescription-item">
+                <div><strong>Created Date:</strong> {{ prescription.created_date }}</div>
+                <div><strong>Medicine Name:</strong> {{ prescription.medicine_name }}</div>
+                <div><strong>Frequencies:</strong> {% if prescription.frequency_morning %}Morning {% endif %} {% if prescription.frequency_afternoon %}Afternoon {% endif %} {% if prescription.frequency_night %}Night {% endif %}</div>
+                <div><strong>Duration:</strong> {{ prescription.duration }}</div>
+                <div><strong>Remarks:</strong> {{ prescription.remarks }}</div>
+                
+            </li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>No prescriptions found for {{ patient }}.</p>
+{% endif %}
+</div>
+<div>
+
   <h3>Add Prescription for {{patient.get_name}}</h3>
   <form class="mx-4 my-4" method="POST">
       {% csrf_token %}
