--- a/templates/hospital/doctor_view_patient.html
+++ b/templates/hospital/doctor_view_patient.html
@@ -49,7 +49,7 @@
         <td>{{p.address}}</td>
         <!-- <td><a href="/doctor-add-prescrip"><button>Add Prescription</button></a></td> -->
         <td><a href="{% url 'doctor-add-prescrip' patient_id=p.id %}"><button>Add prescription</button></a></td>
-        <td><a href="/doctor-add-activity"><button>Add Activity</button></a></td>
+        <td><a href="{% url 'doctor-add-activity' patient_id=p.id %}"><button>Add Activity</button></a></td>
       </tr>
       {% endfor %}
     </table>
