--- a/templates/hospital/index.html
+++ b/templates/hospital/index.html
@@ -11,7 +11,7 @@
     .jumbotron {
       margin-top: 0px;
       margin-bottom: 0px;
-      background-image: url('{% static "images/back.jpg" %}');
+      background-image: url('{% static "images/backfinal.jpeg" %}');
       background-size: cover;
       background-repeat: no-repeat;
     }
